--- a/VRChat/20/1059620.html
+++ b/VRChat/20/1059620.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sGT4kNC/wPcMtNVSon2yw64w6DXiZrgtVr5g5msD9hc="></script>
+    "GzVs0Dl622sfakW2DtIoJO0VBbYr7pJadasSI1n4zzk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"初心者マーク-beginner mark-","description":"初心者マークです\n\nVRChat用を想定して　△20　で作っていますが、基本的になにに使っても問題ないモデルです\n\n出品者としても初心者なので、「おいおいこれが入ってないと使えないぞ」ってものがあればご連絡ください\n即対応いたします\n\n当モデルの利用により生じた一切の損害につき、その賠償義務をソラニンは負いません\n\n\n不明な点があればこちらまでご連絡ください\nツイッター\nhttps://twitter.com/solanine_nico","url":"https://booth.pm/ja/items/1059620","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ad349ea1-c320-473c-933d-01a50c9c733f/i/1059620/5ae65f36-6772-4da1-b726-600671bcc4b2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sGT4kNC/wPcMtNVSon2yw64w6DXiZrgtVr5g5msD9hc="></script>
+    nonce="GzVs0Dl622sfakW2DtIoJO0VBbYr7pJadasSI1n4zzk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      107
+                                      108
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      107
+                                      108
                                     </div>
                                   </div></a>
                                 </div>
@@ -342,9 +342,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
