--- a/VRChat/66/1058866.html
+++ b/VRChat/66/1058866.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9n4mPBiY/co3UqqrKGzNSGPiMrWjvveBpdO+pnU3fZo="></script>
+    "0y+Iinp6n9OhS5uQzlxcXN1efNG6hnqog6nzVYNiszg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Rocking chair（VRChat想定）","description":"VRChat上で使用されることを想定したシンプルなロッキングチェアのモデルです。\nワールドに設置、AFK用のアバター等にお使いください。\n\n【ポリゴン数・テクスチャ】\n・ロッキングチェア（VRChat想定）　△3452\n\n【内容物】\n・ロッキングチェア（VRChat想定）.unitypackage\n・Readme.txt\n・設定画面\n\n【マテリアルの設定】\n1.Unity上で「ロッキングチェア（VRChat想定）.unitypackage」を開く\n2.Hierarchy→ロッキングチェア（VRChat想定）→Sphereを選択する\n3.Materialsの「ロッキングチェア本体」「クッション部分」のShaderのプルダウンを選択し\n任意のShaderを選択する（想定はStandard)\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。","url":"https://booth.pm/ja/items/1058866","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1058866/af6d0753-974c-485a-bcd7-27102fb5736f_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9n4mPBiY/co3UqqrKGzNSGPiMrWjvveBpdO+pnU3fZo="></script>
+    nonce="0y+Iinp6n9OhS5uQzlxcXN1efNG6hnqog6nzVYNiszg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
