--- a/VRChat/19/1386519.html
+++ b/VRChat/19/1386519.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XCMhUcgdPMwrBrR0/zxw2/PjkQVItoA23GM+Iccm3hM="></script>
+    "RaD7il7MAPb76xjRYZZIM/GONnAiZ8t1CAaM4VPs/cA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「青龍」","description":"※購入前に無料版で動作確認する事をお勧めします\n※NFTに関する事への使用を禁止します。※\n※Prohibited to be used for anything related to NFT.※\n\n※注意！※　この3DモデルはVRCSDK\"2\"でセットアップされています。\n\nVRChatでの使用を想定した3Dモデルです。\nunitypackageファイルにVRC Avater Descriptor設定済みのprefabを同梱しております。(事前にVRCSDKを導入してください)\n\n・ポリゴン数：35151(削減モデル：23891)\n・Humanoidボーン設定済\n・デスクトップモードのみ動作確認済み\n・リップシンク：無し\n・アイトラッキング：無し\n\n※通常版はシェーダーにarktoon-shadersを使用しています。事前に同梱されているunitypackageをインポートしてください。\n[配布元]\n・https://booth.pm/ja/items/1027997\n・https://github.com/synqark/Arktoon-Shaders\n\n※その他、不明な点が有る場合は製作者へ御相談ください。\n\n製作：RYU\n[booth]https://ryu-bt.booth.pm/\n[twitter]https://twitter.com/beam_trident\n\n※2019/05/26追記\n・通常版にポリゴン数削減モデルを新しく同梱(エクスプローラー上でファイルを上書きすると差し替える事が出来ます)","url":"https://booth.pm/ja/items/1386519","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/497a17f3-8b49-4d3f-b0de-666716ecfcf8/i/1386519/d683de89-3c2e-412c-8f81-501da4e48160_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XCMhUcgdPMwrBrR0/zxw2/PjkQVItoA23GM+Iccm3hM="></script>
+    nonce="RaD7il7MAPb76xjRYZZIM/GONnAiZ8t1CAaM4VPs/cA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -649,9 +649,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
